--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,46 +1,25 @@
-.page-header {
-    background-color: #448AFF;
-    margin-top: 0;
-    padding: 20px 20px 20px 40px;
+body{
+    background: #F5F5F5 url("background.png") repeat right bottom;
 }
 
-.page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
-    color: #ffffff;
-    font-size: 36pt;
-    text-decoration: none;
+.navbar-background{
+    background-color: #B3E5FC;
+    padding: 10px;
 }
 
-.content {
-    margin-left: 40px;
+.custom-card{
+    background-color: white;
+    padding: 15px;
+    margin: 10px;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14);
 }
 
-h1, h2, h3, h4 {
-    font-family: 'Impact';
+h1{
+    font-family: "Myriad Pro", serif;
 }
 
-.date {
-    color: #828282;
-}
-
-.save {
-    float: right;
-}
-
-.post-form textarea, .post-form input {
-    width: 100%;
-}
-
-.top-menu, .top-menu:hover, .top-menu:visited {
-    color: #ffffff;
-    float: right;
-    font-size: 26pt;
-    margin-right: 20px;
-}
-
-.post {
-    margin-bottom: 70px;
-}
-
-.post h1 a, .post h1 a:visited {
-    color: #0D47A1;
+.mybutton{
+    font-size: medium;
+    width: auto;
+    white-space: nowrap;
 }
