--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,16 +1,19 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-    <div class="post">
+    <div class="post custom-card">
+        <h1>{{ post.title }}
+            {% if user.issuperuser or user == post.author%}
+                <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+            {% endif %}</h1>
         {% if post.published_date %}
             <div class="date">
+                {{ post.author }}
+                -
                 {{ post.published_date }}
             </div>
         {% endif %}
-		{% if user.is_authenticated %}
-			<a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
-		{% endif %}
-        <h1>{{ post.title }}</h1>
-        <p>{{ post.text|linebreaksbr }}</p>
+        <br>
+        <div>{{ post.text|linebreaksbr }}</div>
     </div>
 {% endblock %}
