--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -2,11 +2,14 @@
 
 {% block content %}
     {% for post in posts %}
-        <div class="post">
+        <div class="post custom-card">
             <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
-			<div class="date">
+			<div class="date text-left">
+                {{ post.author }}
+                  -
                 {{ post.published_date }}
             </div>
+            <br>
             <p>{{ post.text|linebreaksbr }}</p>
         </div>
     {% endfor %}
