--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -5,12 +5,13 @@ body{
 .navbar-background{
     background-color: #B3E5FC;
     padding: 10px;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14);
 }
 
 .custom-card{
     background-color: white;
     padding: 15px;
-    margin: 10px;
+    margin: 10px 10px 20px;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14);
 }
 
