--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -1,9 +1,14 @@
 {% extends 'blog/base.html' %}
 
+{% block profile %}
+{% endblock %}
 {% block content %}
-    <h1>New post</h1>
-    <form method="POST" class="post-form">{% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="save btn btn-default">Save</button>
-    </form>
+
+    <div class="card custom-card">
+        <h1>New post</h1>
+        <form method="POST" class="post-form" style="width: 100%">{% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit" class="save btn btn-default">Save</button>
+        </form>
+    </div>
 {% endblock %}
