--- a/blog/templates/blog/signup.html
+++ b/blog/templates/blog/signup.html
@@ -1,12 +1,14 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-    <div class="container">
-  <h2>Sign up</h2>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Sign up</button>
-  </form>
+
+    <div class="custom-card">
+
+        <h2>Sign up</h2>
+        <form method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit">Sign up</button>
+        </form>
     </div>
 {% endblock %}
