--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -2,14 +2,11 @@
 <html>
 <head>
     <title>Dwem+</title>
-	<meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
     <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-	<script src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
-	<script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js'></script>
     <link rel="stylesheet" href="{% static 'css/blog.css' %}">
 </head>
-
 <body>
 <nav class="navbar navbar-background">
     <div class="container text-center">
@@ -27,12 +24,14 @@
         </ul>
     </div>
 </nav>
-<div class="container text-center">
-    <div class="row ">
+<div class="content container text-center">
+    <div class="row">
+        {% if user.is_authenticated %}
             <div class="col-xs-12 col-md-3">
                 {% block profile %}
                 {% endblock %}
             </div>
+        {% endif %}
         <div class="col-xs-12 col-md-9 text-left">
             {% block content %}
             {% endblock %}
