--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -1,14 +1,9 @@
 {% extends 'blog/base.html' %}
 
-{% block profile %}
-{% endblock %}
 {% block content %}
-
-    <div class="card custom-card">
-        <h1>New post</h1>
-        <form method="POST" class="post-form" style="width: 100%">{% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit" class="save btn btn-default">Save</button>
-        </form>
-    </div>
+    <h1>New post</h1>
+    <form method="POST" class="post-form">{% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit" class="save btn btn-default">Save</button>
+    </form>
 {% endblock %}
